--- a/src/app.css
+++ b/src/app.css
@@ -29,7 +29,7 @@
 }
 
 @source "../node_modules/flowbite-svelte/dist";
-@source "../node_modules/flowbite-svelte-icons/dist";
+/*@source "../node_modules/flowbite-svelte-icons/dist";*/
 
 @layer base {
     /* disable chrome cancel button */
