--- a/src/app.css
+++ b/src/app.css
@@ -39,34 +39,34 @@
 }
 
 /*.container {*/
- /*    !*margin: 0;*!*/
- /*    !*padding-top: 10vh;*!*/
- /*    display: flex;*/
- /*    !*flex-direction: column;*!*/
- /*    justify-content: center;*/
- /*    text-align: center;*/
+/*    !*margin: 0;*!*/
+/*    !*padding-top: 10vh;*!*/
+/*    display: flex;*/
+/*    !*flex-direction: column;*!*/
+/*    justify-content: center;*/
+/*    text-align: center;*/
 /*}*/
 :root {
- /*font-family: Inter, Avenir, Helvetica, Arial, sans-serif;*/
- /*font-size: 16px;*/
- /*line-height: 24px;*/
- /*font-weight: 400;*/
+    /*font-family: Inter, Avenir, Helvetica, Arial, sans-serif;*/
+    /*font-size: 16px;*/
+    /*line-height: 24px;*/
+    /*font-weight: 400;*/
 
- color: #0f0f0f;
- background-color: #f6f6f6;
+    color: #0f0f0f;
+    background-color: #f6f6f6;
 
- /*font-synthesis: none;*/
- /*text-rendering: optimizeLegibility;*/
- /*-webkit-font-smoothing: antialiased;*/
- /*-moz-osx-font-smoothing: grayscale;*/
- /*-webkit-text-size-adjust: 100%;*/
+    /*font-synthesis: none;*/
+    /*text-rendering: optimizeLegibility;*/
+    /*-webkit-font-smoothing: antialiased;*/
+    /*-moz-osx-font-smoothing: grayscale;*/
+    /*-webkit-text-size-adjust: 100%;*/
 }
 
 @media (prefers-color-scheme: dark) {
-:root {
-    color: #f6f6f6;
-    background-color: #2f2f2f;
-}
+    :root {
+        color: #f6f6f6;
+        background-color: #2f2f2f;
+    }
 }
 
 /* discourse lightbox*/
@@ -76,4 +76,9 @@
 
 .d-icon-far-image {
     display: none;
+}
+
+
+.emoji {
+    display: inline;
 }
